--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/styles": "5.6.2",
     "@mui/x-data-grid": "5.10.0",
     "@mui/x-date-pickers": "5.0.0-alpha.2",
+    "@reduxjs/toolkit": "^1.8.4",
     "animate.css": "^4.1.1",
     "date-fns": "^2.29.1",
     "i18next": "21.6.16",
@@ -21,9 +22,11 @@
     "react-dom": "18.1.0",
     "react-i18next": "^11.18.3",
     "react-notifications-component": "4.0.0",
+    "react-redux": "^8.0.2",
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "styled-components": "5.3.5"
   },
   "scripts": {
